--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
   </head>
 
   <body>
-    <%= yield %>
+
+    <div class="container-fluid">
+
+      <%= yield %>
+
+    </div>
+
   </body>
+
 </html>
