--- a/app/views/public/landing.html.erb
+++ b/app/views/public/landing.html.erb
@@ -1,14 +1,16 @@
 <div class="row h-100">
-  <div class="col-4">
-    <div class="col-1 mt-5 p-0 d-flex flex-column">
-      <div class="column-heading-no-bg"></div>
-      <% @tod_range.each do |h| %>
-        <div class="hour-cell">
-            <%= h %>
-        </div>
-      <% end %>
-    </div>
+
+  <!-- BEGIN TIME COLUMN -->
+  <div class="col-1 mt-5 p-0 d-flex flex-column">
+    <div class="column-heading-no-bg"></div>
+    <% @tod_range.each do |h| %>
+      <div class="hour-cell">
+        <%= ScheduleService::prettify_tod_hour(h) %>
+      </div>
+    <% end %>
   </div>
+  <!-- END TIME COLUMN -->
+
   <div class="col-4"><p>Foo</p></div>
   <div class="col-4"></div>
 </div>
