--- a/app/views/public/landing.html.erb
+++ b/app/views/public/landing.html.erb
@@ -17,21 +17,42 @@
 
     <div class="technician-col col mt-5 p-0 d-flex flex-column">
 
+      <!-- BEGIN COLUMN HEADING -->
       <div class="column-heading">
         <div class="badge">
           <%= technician.name.titleize %>
         </div>
       </div>
+      <!-- END COLUMN HEADING -->
 
-      <% @tod_range.each do |h| %>
-        <div class="hour-cell">
-        </div>
-      <% end %>
+      <div style="position: relative" class="d-flex flex-fill flex-column">
 
+        <!-- BEGIN HOUR LINES -->
+        <% @tod_range.each do |h| %>
+          <div class="hour-cell"></div>
+        <% end %>
+        <!-- END HOUR LINES -->
 
+        <!-- BEGIN ABSOLUTE SCHEDULE ITEMS -->
+        <% technician.work_orders.each do |work_order| %>
+          <% css_string = ScheduleService::css_for_work_order(work_order, @tod_range.first) %>
+          <div
+            style="<%= css_string %>"
+            class="work-order-cell shadow p-3"
+          >
+            <p>
+              <%= work_order.location.name  %>,
+              <%= work_order.location.city  %>
+              @ <%= work_order.pretty_tod  %>
+            </p>
+            <p>
+              Price: <%= work_order.pretty_price %>
+            </p>
+          </div>
+        <% end %>
+        <!-- END ABSOLUTE SCHEDULE ITEMS -->
+      </div>
     </div>
-
   <% end %>
   <!-- END TECHNICIAN COLUMNS -->
-
 </div>
