--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,3 +44,18 @@
   background-color: #3ce218;
   text-color: white;
 }
+
+.free-time-cell {
+  font-size: 75%;
+  font-weight: 700;
+  line-height: 1;
+  width: 100%;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  text-align: left;
+
+  &:hover {
+    background-color: rgba(255,128,0,0.5);
+  }
+}
