--- a/app/views/public/landing.html.erb
+++ b/app/views/public/landing.html.erb
@@ -55,6 +55,7 @@
         <!-- BEGIN ABSOLUTE POS FREE TIMES -->
         <% ScheduleService::free_times(technician.work_orders, @tod_range.first).each do |free_time| %>
           <div class="free-time-cell"
+               data-time-available="<%= free_time[:time_available_pretty] %>"
                style="<%= free_time[:css] %>">
           </div>
         <% end %>
@@ -72,7 +73,7 @@
       <span class="close">&times;</span>
     </div>
     <div class="modal-text-container">
-      <p>Some text in the Modal..</p>
+      <p id="free-time-modal-text"></p>
     </div>
   </div>
 </div>
