--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -1,11 +1,14 @@
+
+$cell-height: 75px;
+
 .hour-cell {
-  height: 75px;
+  height: $cell-height;
   border-bottom: 2px dotted gray;
 }
 
 .column-heading {
   p {
-    font-size: 75%;
+    font-size: 90%;
     font-weight: 700;
     line-height: 0.5;
     text-align: left
@@ -14,18 +17,18 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 50px;
+  height: $cell-height;
   padding: 10px;
   background-color: lightgray;
 }
 
 .column-heading-no-bg {
-  height: 50px;
+  height: $cell-height;
   padding: 5px;
 }
 
 .work-order-cell {
-  font-size: 75%;
+  font-size: 90%;
   font-weight: 700;
   line-height: 0.5;
   width: 100%;
