--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -13,10 +13,10 @@
 
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
+  margin: 15% auto;
+  padding: 30px;
   border: 1px solid #888;
-  width: 50%;
+  width: 30%;
 }
 
 .modal-text-container{
