tidy up javascript, move to individual pack

--- a/app/views/public/landing.html.erb
+++ b/app/views/public/landing.html.erb
@@ -90,14 +90,14 @@
 </div>
 
 <!-- BEGIN MODAL -->
-<div id="free-time-modal" class="modal">
+<div id="modal" class="modal">
   <div class="modal-content">
     <div class="modal-close-container">
       <span class="close">&times;</span>
     </div>
     <div class="modal-text-container">
       <h6>
-          Time Available: <span id="free-time-modal-text" ></span>
+          Time Available: <span id="modal-text" ></span>
       </h6>
     </div>
   </div>
