--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -33,19 +33,11 @@ $cell-height: 75px;
   transform: translate(-50%, 0%);
   text-align: left;
   background-color: #3ce218;
-  text-color: white;
 }
 
 .free-time-cell {
-  font-size: 75%;
-  font-weight: 700;
-  line-height: 1;
-  width: 95%;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, 0%);
-  text-align: left;
-
+  @extend .work-order-cell;
+  background: none;
   &:hover {
     background-color: rgba(255,128,0,0.5);
   }
