added modal partial

--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -14,7 +14,7 @@
 .modal-content {
   background-color: #fefefe;
   margin: 15% auto;
-  padding: 30px;
+  padding: 15px;
   border: 1px solid #888;
   width: 30%;
 }
@@ -22,7 +22,7 @@
 .modal-text-container{
   display: flex;
   justify-content: center;
-  align-items: center
+  align-items: center;
 }
 
 .modal-close-container{
